# 2022-2-Rasterizacion

./: .gitignore  CMakeLists.txt  main.cpp
LearnOpenGL/: 2.1.basic_lighting.fs  3.1.2.shadow_mapping.fs  CMakeLists.txt  basic_lighting_diffuse.cpp  basic_lighting_specular.cpp  camera.h  camera_circle.cpp  model_loading.cpp  normal_mapping.cpp  piramides10.cpp  shadow_mapping_base.cpp  shadow_mapping_depth.cpp
Objetos/: CMakeLists.txt  Objeto.cpp  Objeto.h  basic_lighting_specular.cpp  glad.c  glut_ply.cpp  glut_ply.h  main.cpp
Objetos/models/: piramide.ply
Piramide1/: CMakeLists.txt  main.cpp  main_matriz_1.cpp  shader.cpp  shader.h  vertexShader_modelo.vs
Superficie/: 2.1.point.fs  2.1.point.gs  2.1.point.vs  CMakeLists.txt  basic_lighting_diffuse.cpp
WebGL/ejemplo3/: webgl-demo.js
WebGL/ejemplo3.1/: webgl-demo.js
WebGL/ejemplo3.2/: webgl-demo.js
WebGL/ejemplo3.2.normals/: webgl-demo.js
esferas/: CMakeLists.txt  Entidad.cpp  Entidad.h  Objeto.cpp  Objeto.h  Universo.cpp  Universo.h  esferas.cpp
glfw/: CMakeLists.txt  fragmentShader.fs  fragmentShader2.fs  hello_triangle.cpp  hello_triangle_2.cpp  mat4.h  piramide_1.cpp  vertexShader.vs  vertexShader_modelo.vs
modelado-geometrico/: CMakeLists.txt  main.cpp
piramides/: CMakeLists.txt  piramides10.cpp
